[gd_scene load_steps=2 format=3 uid="uid://dh7q2v8x6m5nl"]

[ext_resource type="Script" path="res://scripts/game/game_controller.gd" id="1_game"]

[node name="Game" type="Node3D"]
script = ExtResource("1_game")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = null

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 0, 20, 0)
shadow_enabled = true

[node name="Map" type="Node3D" parent="."]

[node name="Players" type="Node3D" parent="."]

[node name="Zombies" type="Node3D" parent="."]

[node name="Interactables" type="Node3D" parent="."]

[node name="PowerUps" type="Node3D" parent="."]

[node name="Barriers" type="Node3D" parent="."]

[node name="SpawnPoints" type="Node3D" parent="."]

[node name="PlayerSpawn1" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="PlayerSpawn2" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, 0)

[node name="PlayerSpawn3" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 0)

[node name="PlayerSpawn4" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 2)

[node name="ZombieSpawnPoints" type="Node3D" parent="."]

[node name="ZombieSpawn1" type="Marker3D" parent="ZombieSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 10)

[node name="ZombieSpawn2" type="Marker3D" parent="ZombieSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 10)

[node name="ZombieSpawn3" type="Marker3D" parent="ZombieSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -10)

[node name="ZombieSpawn4" type="Marker3D" parent="ZombieSpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -10)

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="HUDControl" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WaveManager" type="Node" parent="."]
